--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -9,3 +9,9 @@
   text-align: center;
   padding: 7rem 0 !important;
 }
+/* details */
+details{
+  color: #00bcd4;
+  font-size: 14px;
+  cursor: pointer;
+}
